collection of uniqueWords